--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "file-saver": "^2.0.5",
+    "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "mdb-react-ui-kit": "^4.1.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-excel-renderer": "^1.1.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
